--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>Hello World!!!</p>
-
+    <section class="main">
+      <div class="container pal">
+        <input type="text" class="input-text" placeholder="Enter A Word..."/>
+        <button class="btn">Check</button>
+        <p class="result"></p>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
